--- a/docs/additional-example.ipynb
+++ b/docs/additional-example.ipynb
@@ -18,12 +18,15 @@
     "from typing import Iterable, Literal, Optional\n",
     "\n",
     "from sklearn.metrics import DistanceMetric\n",
-    "from sklearn.preprocessing import StandardScaler"
+    "from sklearn.preprocessing import StandardScaler\n",
+    "import torch \n",
+    "from torch.autograd import Variable\n",
+    "from torch import nn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,6 +466,8 @@
     "        p = p / np.sum(p) # Normalizing the final distribution\n",
     "        return p\n",
     "\n",
+    "\n",
+    "    \n",
     "def mixture_sampler(\n",
     "    condition_pool: np.ndarray, weights: np.ndarray, temperature: int, \n",
     "    X_ref: np.ndarray, \n",
@@ -500,14 +505,13 @@
     "    familiarity_scores[novelty_scores>0]=0\n",
     "    novelty_scores[novelty_scores<0]=0\n",
     "    \n",
-    "    \n",
     "    # aligning the arrays based on the observations (condition pools)\n",
-    "    novelty_indices = np.argsort(novelty_ranking)\n",
+    "    novelty_indices = np.argsort(novelty_ranking, axis=None)\n",
     "    ranking_sorted = novelty_ranking[novelty_indices]\n",
     "    novelty_scores_sorted = novelty_scores[novelty_indices]\n",
     "    familiarity_scores_sorted = familiarity_scores[novelty_indices]\n",
     "\n",
-    "    falsification_indices = np.argsort(falsification_ranking)\n",
+    "    falsification_indices = np.argsort(falsification_ranking, axis=None)\n",
     "    falsification_scores_sorted = falsification_scores[falsification_indices]    \n",
     "    confirmation_scores_sorted = confirmation_scores[falsification_indices] \n",
     "    \n",
@@ -521,10 +525,124 @@
     "    if num_samples is None:\n",
     "        num_samples = condition_pool.shape[0]\n",
     "    \n",
-    "    conditions = np.random.choice(ranking_sorted, num_samples,\n",
-    "              p=weighted_mixture_scores_adjusted)\n",
+    "    conditions = np.random.choice(ranking_sorted.T.squeeze(), num_samples,\n",
+    "              p=weighted_mixture_scores_adjusted, replace = False)\n",
     "    \n",
     "    return conditions\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MixtureExperimentalist:\n",
+    "    def __init__(self, weights: np.ndarray, temperature: int, \n",
+    "    X_ref: np.ndarray, \n",
+    "    X_train: np.ndarray,\n",
+    "    Y_train: np.ndarray, Y_predicted, num_samples: Optional[int] = None):\n",
+    "        self.weights = weights\n",
+    "        self.temperature = temperature\n",
+    "        self.X_ref = X_ref\n",
+    "        self.X_train = X_train\n",
+    "        self.Y_train = Y_train\n",
+    "        self.Y_predicted = Y_predicted\n",
+    "        self.num_samples = num_samples\n",
+    "\n",
+    "    def __call__(self, condition_pool: np.ndarray, **kwargs):\n",
+    "        params = dict(weights = self.weights, temperature = self.temperature, X_ref = self.X_ref,\n",
+    "                     X_train = self.X_train, Y_train = self.Y_train, Y_predicted = self.Y_predicted,\n",
+    "                     num_samples = self.num_samples)\n",
+    "        params.update(kwargs)\n",
+    "        \n",
+    "        samples = mixture_sampler(condition_pool, **params)\n",
+    "        return samples\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experimentalist = MixtureExperimentalist(weights = np.array([0.2,0.3,0.3,0.7]), temperature = 20, \n",
+    "    X_ref = np.array([10,25,30]), \n",
+    "    X_train = np.array([2,5,6]),\n",
+    "    Y_train = np.array([20,25,26]), Y_predicted = np.array([21,22,23]), num_samples = 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "[[1]\n",
+      " [2]\n",
+      " [3]]\n",
+      "(3, 1)\n",
+      "[0.35493798 0.28306655 0.36199547]\n",
+      "(3,)\n",
+      "[1 2 3]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 3, 2])"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "experimentalist(condition_pool = np.array([1,2,3]), num_samples = 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "[[1]\n",
+      " [2]\n",
+      " [3]]\n",
+      "(3, 1)\n",
+      "[0.3509837  0.29130689 0.3577094 ]\n",
+      "(3,)\n",
+      "[1 2 3]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 3])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mixture_sampler(\n",
+    "    np.array([1,2,3]), np.array([0.2,0.3,0.3,0.7]), 20, \n",
+    "    np.array([10,25,30]), \n",
+    "    np.array([2,5,6]),\n",
+    "    np.array([20,25,26]), np.array([21,22,23]), 2)"
    ]
   },
   {
