--- a/docs/basic-usage.ipynb
+++ b/docs/basic-usage.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Mixture Sampler Basic Usage\n",
+    "# Basic Usage\n",
     "\n",
     "The goal of this notebook is to demonstrate the usage of the `mixture_sampler` function, which combines different sampling strategies to select experimental conditions. The `mixture_sampler` function takes a pool of experimental conditions, a temperature parameter, a list of samplers with their weights, a dictionary of parameters for the samplers, and an optional number of samples to return.\n",
     "\n",
