adjusted function name in the example

--- a/docs/basic-usage.ipynb
+++ b/docs/basic-usage.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Basic Usage\n",
     "\n",
-    "The goal of this notebook is to demonstrate the usage of the `mixture_sampler` function, which combines different sampling strategies to select experimental conditions. The `mixture_sampler` function takes a pool of experimental conditions, a temperature parameter, a list of samplers with their weights, a dictionary of parameters for the samplers, and an optional number of samples to return.\n",
+    "The goal of this notebook is to demonstrate the usage of the `mixture_sample` function, which combines different sampling strategies to select experimental conditions. The `mixture_sample` function takes a pool of experimental conditions, a temperature parameter, a list of samplers with their weights, a dictionary of parameters for the samplers, and an optional number of samples to return.\n",
     "\n",
     "We begin with importing the necessary packages."
    ]
@@ -31,7 +31,7 @@
     }
    ],
    "source": [
-    "from autora.experimentalist.sampler.mixture_experimentalist import mixture_sampler"
+    "from autora.experimentalist.sampler.mixture_experimentalist import mixture_sample"
    ]
   },
   {
@@ -136,7 +136,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected_conditions = mixture_sampler(\n",
+    "selected_conditions = mixture_sample(\n",
     "    condition_pool=new_X,\n",
     "    temperature=0.01,\n",
     "    samplers=[[novelty_score_sample, \"novelty\", [0.8, 0.2]]],\n",
@@ -221,7 +221,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected_conditions = mixture_sampler(\n",
+    "selected_conditions = mixture_sample(\n",
     "    condition_pool=new_X,\n",
     "    temperature=2,\n",
     "    samplers=[[novelty_score_sample, \"novelty\", [0.8, 0.2]]],\n",
@@ -351,7 +351,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected_conditions = mixture_sampler(\n",
+    "selected_conditions = mixture_sample(\n",
     "    condition_pool=new_X,\n",
     "    temperature=0.01,\n",
     "    samplers=[[novelty_score_sample, \"novelty\", [0.7, 0.1]], [falsification_score_sampler, \"falsification\", [0.5, 0]]],\n",
