--- a/docs/basic-usage.ipynb
+++ b/docs/basic-usage.ipynb
@@ -13,25 +13,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Uncomment the following lines when running on Google Colab\n",
+    "# !pip install autora[experimentalits-sampler-mixture]\n",
+    "# !pip install autora[experimentalist-falsification]\n",
+    "# !pip install autora[experimentalist-sampler-inequality]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'autora.experimentalist.sampler.mixture_experimentalist'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mautora\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mexperimentalist\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msampler\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmixture_experimentalist\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m mixture_sampler\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'autora.experimentalist.sampler.mixture_experimentalist'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from autora.experimentalist.sampler.mixture_experimentalist import mixture_sample"
+    "from autora.experimentalist.sampler.mixture import mixture_sample"
    ]
   },
   {
