--- a/docs/basic-usage.ipynb
+++ b/docs/basic-usage.ipynb
@@ -18,9 +18,9 @@
    "outputs": [],
    "source": [
     "# Uncomment the following lines when running on Google Colab\n",
-    "# !pip install autora[experimentalits-sampler-mixture]\n",
-    "# !pip install autora[experimentalist-falsification]\n",
-    "# !pip install autora[experimentalist-sampler-inequality]"
+    "# !pip install \"autora[experimentalits-sampler-mixture]\"\n",
+    "# !pip install \"autora[experimentalist-falsification]\"\n",
+    "# !pip install \"autora[experimentalist-sampler-inequality]\""
    ]
   },
   {
