--- a/docs/basic-usage.ipynb
+++ b/docs/basic-usage.ipynb
@@ -18,9 +18,9 @@
    "outputs": [],
    "source": [
     "# Uncomment the following lines when running on Google Colab\n",
-    "# !pip install \"autora[experimentalits-sampler-mixture]\"\n",
+    "# !pip install \"autora[experimentalits-mixture]\"\n",
     "# !pip install \"autora[experimentalist-falsification]\"\n",
-    "# !pip install \"autora[experimentalist-sampler-inequality]\""
+    "# !pip install \"autora[experimentalist-novelty]\""
    ]
   },
   {
@@ -33,16 +33,14 @@
      "evalue": "No module named 'autora'",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-5feb8d753802>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mautora\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexperimentalist\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msampler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmixture\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmixture_sample\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'autora'"
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
+      "\u001B[0;32m<ipython-input-1-5feb8d753802>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[0;32m----> 1\u001B[0;31m \u001B[0;32mfrom\u001B[0m \u001B[0mautora\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mexperimentalist\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0msampler\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mmixture\u001B[0m \u001B[0;32mimport\u001B[0m \u001B[0mmixture_sample\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[0;31mModuleNotFoundError\u001B[0m: No module named 'autora'"
      ]
     }
    ],
-   "source": [
-    "from autora.experimentalist.sampler.mixture import mixture_sample"
-   ]
+   "source": ""
   },
   {
    "cell_type": "code",
@@ -50,8 +48,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from autora.experimentalist.sampler.falsification import falsification_sampler, falsification_score_sampler, falsification_score_sampler_from_predictions\n",
-    "from autora.experimentalist.sampler.novelty import novelty_sampler, novelty_score_sample\n",
+    "from autora.experimentalist.mixture import mixture_sample\n",
+    "from autora.experimentalist.falsification import falsification_sample, falsification_score_sample\n",
+    "from autora.experimentalist.novelty import novelty_sampler, novelty_score_sample\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -147,7 +146,7 @@
    "outputs": [],
    "source": [
     "selected_conditions = mixture_sample(\n",
-    "    condition_pool=new_X,\n",
+    "    conditions=new_X,\n",
     "    temperature=0.01,\n",
     "    samplers=[[novelty_score_sample, \"novelty\", [0.8, 0.2]]],\n",
     "    params=params,\n",
@@ -232,7 +231,7 @@
    "outputs": [],
    "source": [
     "selected_conditions = mixture_sample(\n",
-    "    condition_pool=new_X,\n",
+    "    conditions=new_X,\n",
     "    temperature=2,\n",
     "    samplers=[[novelty_score_sample, \"novelty\", [0.8, 0.2]]],\n",
     "    params=params,\n",
@@ -362,9 +361,9 @@
    "outputs": [],
    "source": [
     "selected_conditions = mixture_sample(\n",
-    "    condition_pool=new_X,\n",
+    "    conditions=new_X,\n",
     "    temperature=0.01,\n",
-    "    samplers=[[novelty_score_sample, \"novelty\", [0.7, 0.1]], [falsification_score_sampler, \"falsification\", [0.5, 0]]],\n",
+    "    samplers=[[novelty_score_sample, \"novelty\", [0.7, 0.1]], [falsification_score_sample, \"falsification\", [0.5, 0]]],\n",
     "    params=params,\n",
     "    num_samples=10\n",
     ")"
